# retrace-defect-ledger

./: .gitignore  README.md  pyproject.toml
examples/: basic_trace.py  trace_data_spec.py
retrace/: __init__.py  __main__.py  checks.py  cli.py  core.py  output.py
retrace/adapters/: __init__.py  csv_adapter.py  json_adapter.py
tests/: test_checks.py  test_cli.py  test_csv_adapter.py  test_examples.py  test_retrace.py
tests/fixtures/csv/: missing_values.csv  numeric_strings.csv  quoted.csv  simple.csv
