[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "retrace-defect-ledger"
description = "A deterministic compression-complexity flight recorder for data transformations."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    { name = "Guntars Nosals" }
]
keywords = [
    "data-pipeline",
    "debugging",
    "compression",
    "observability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Debuggers",
]

[tool.setuptools.packages.find]
include = ["retrace*"]

[tool.setuptools.dynamic]
version = { attr = "retrace.__version__" }

[project.scripts]
retrace = "retrace.cli:main"
